<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Renommer le fichier de données de la campagne en cours ?"
        android:paddingBottom="10dip"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView1"
        android:hint="NomCampagne.txt"/>
    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modifier le mode d'acquisition ?"
        android:layout_below="@id/EditText1"
        android:paddingTop="10dp"
        android:paddingBottom="10dip"
        android:textSize="@dimen/text_size_medium"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingTop="5dp"
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_below="@id/TextView3"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton android:id="@+id/radio_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueMode"
            />
        <RadioButton android:id="@+id/radio_discontinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discontinueMode"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modifier le nombre d'échantillons par mesure ?"
        android:layout_below="@id/radioGroup"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:id="@+id/EditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView2"
        android:hint="1"/>
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_toRightOf="@id/EditText2"
        android:layout_width="800px"
        android:layout_height="40px"
        android:max="30"
        android:progress="2"
        android:layout_below="@id/TextView2"
        />


    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_fichier"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/medium_text_size"
        android:paddingLeft="5dp"
        android:paddingBottom="10dip"
        />
    <TextView
        android:id="@+id/Blanc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/seekBar"
        android:paddingBottom="10dip"
        android:textSize="@dimen/text_size_medium"/>

    <Button
        android:id="@+id/enregistrer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Enregistrer"
        android:layout_below="@id/Blanc2"
        android:background="@color/BackgroundButton"
        android:textColor="@color/TextButton"/>
</RelativeLayout>