<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/MyTheme"
    >

    <ImageButton android:id="@+id/parametre"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        android:layout_marginTop="0dip"
        android:layout_marginRight="0dip"
        android:layout_alignParentRight="true"
        android:padding="0dip"
        android:background="@android:color/transparent"
        android:src= "@drawable/parametre" />

    <TextView android:id="@+id/nomCampagne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomCampagne"
        android:textSize="@dimen/text_size_large"
        />
    <TextView android:id="@+id/NbMesure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NbMesure"
        android:layout_below="@id/nomCampagne"
        android:textSize="@dimen/text_size_medium"
        />

    <TextView android:id="@+id/NbM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/NbMesure"
        android:layout_below="@id/nomCampagne"
        android:text="0"
        android:textSize="@dimen/text_size_medium"
        />
    <TextView android:id="@+id/fichier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fichier"
        android:layout_below="@id/NbMesure"
        android:textSize="@dimen/text_size_medium"
        />
    <TextView android:id="@+id/deupoints2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" : "
        android:layout_below="@id/NbMesure"
        android:layout_toRightOf="@id/fichier"
        android:textSize="@dimen/text_size_medium"
        />
    <TextView android:id="@+id/nomFichier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fichier.txt"
        android:layout_below="@id/NbMesure"
        android:layout_toRightOf="@id/deupoints2"
        android:textSize="@dimen/text_size_medium"
        />


    <RelativeLayout
        android:id="@+id/StartStop"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below = "@id/nomFichier">

        <ImageButton android:id="@+id/buttonRefresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:padding="0dip"
            android:background="@android:color/transparent"
            android:src= "@drawable/start" />

        <ImageButton android:id="@+id/buttonstop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:src= "@drawable/stop" />

    </RelativeLayout>

    <TextView android:id="@+id/Wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/StartStop"
        android:paddingTop="10dp"
        android:text="Une acquisition est en cours"
        android:textSize="@dimen/text_size_medium"
        />
    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:layout_toRightOf="@+id/Wait"
        android:layout_below="@id/StartStop"
        android:layout_marginLeft="10dp"
        android:id="@+id/progressbar" />

    <TextView android:id="@+id/Echantillon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Wait"
        android:text="Echantillons recueillis : "
        android:textSize="@dimen/text_size_medium"
        />
    <TextView android:id="@+id/Previsualisation"
        android:text="@string/Prévisualisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Echantillon"
        android:paddingRight="10px"
        android:textSize="@dimen/text_size_medium"
        >
    </TextView>

    <TextView android:id="@+id/messageGPS"
        android:text="Distance parcourue entre deux mesures : "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Previsualisation"
        android:paddingRight="10px"
        android:textSize="@dimen/text_size_medium"/>

    <TextView android:id="@+id/distanceParcourue"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Previsualisation"
        android:layout_toRightOf="@id/messageGPS"
        android:paddingRight="10px"
        android:textSize="@dimen/text_size_medium"/>

    <TextView android:id="@+id/NbEchantillon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Wait"
        android:layout_toRightOf="@id/Echantillon"
        android:text="0"
        android:textSize="@dimen/text_size_medium"
        />

    <ListView android:id="@+id/listViewWifi"
        android:layout_height="fill_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/messageGPS"
        android:layout_alignParentBottom="true">
    </ListView>

    <ImageButton android:id="@+id/Carte"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitEnd"
        android:layout_below="@+id/messageGPS"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:src= "@drawable/carte"/>

</RelativeLayout>

</ScrollView>
